# flakehell

./: .gitignore  .travis.yml  example.py  pyproject.toml
docs/: conf.py
flakehell/: __init__.py  __main__.py  _cli.py  _constants.py  _types.py
flakehell/_logic/: __init__.py  _baseline.py  _colors.py  _config.py  _discover.py  _extractors.py  _plugin.py
flakehell/_patched/: __init__.py  _app.py  _checkers.py  _plugins.py  _style_guide.py  _violation.py
flakehell/commands/: __init__.py  _baseline.py  _code.py  _codes.py  _lint.py  _missed.py  _plugins.py
flakehell/formatters/: __init__.py  _baseline.py  _colored.py  _grouped.py  _json.py  _stat.py  _teamcity.py
flakehell/plugins/: __init__.py  _pylint.py
