[tool.flakehell]
exclude = ["example.py", "setup.py"]
max_line_length = 120
# show_source = true

[tool.flakehell.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
flake8-commas = ["+*"]
flake8-quotes = ["+*"]
pylint = ["+F*", "+E*", "-E0611", "-E1101", "-E0401", "-E1004"]

[tool.poetry]
name = "flakehell-py27"
version = "0.3.0"
description = "Flake8 wrapper to make it nice and configurable"
packages = [{include= "flakehell"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
homepage = "https://gitlab.com/life4/flakehell"
authors = ["Gram <master_fess@mail.ru>"]
readme = "README.md"

[tool.poetry.scripts]
flakehell = "flakehell:entrypoint"
flake8helled = "flakehell:flake8_entrypoint"

[tool.poetry.plugins."flake8.extension"]
pylint = "flakehell.plugins:PyLintChecker"

[tool.poetry.plugins."flake8.report"]
baseline = "flakehell.formatters:BaseLineFormatter"
colored = "flakehell.formatters:ColoredFormatter"
grouped = "flakehell.formatters:GroupedFormatter"
json = "flakehell.formatters:JSONFormatter"
stat = "flakehell.formatters:StatFormatter"
teamcity = "flakehell.formatters:TeamCityFormatter"

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
entrypoints = "*"
flake8 = ">=3.7.5"
pygments = "*"
pylint = "*"
termcolor = "*"
toml = "*"
urllib3 = "*"
pathlib2 = {python = "<3.6", version="*"}
future = "^0.18.1"

[tool.poetry.dev-dependencies]
dlint = "*"
flake8-alfred = {python = "^3.6", version = "*"}
flake8-annotations-complexity = {python = "^3.6", version = "*"}
flake8-bandit = "*"
flake8-broken-line = {python = "^3.6", version = "*"}
flake8-bugbear = {python = "^3.6", version = "*"}
flake8-builtins = "*"
flake8-coding = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-django = "*"
flake8-docstrings = "*"
flake8-eradicate = {python = "^3.6", version = "*"}
flake8-executable = {python = "^3.6", version = "*"}
flake8-isort = "*"
flake8-logging-format = "*"
flake8-mutable = "*"
flake8-pep3101 = "*"
flake8-pie = {python = "^3.6", version = "*"}
flake8-print = "*"
flake8-quotes = "*"
flake8-rst-docstrings = "*"
flake8-scrapy = {python = "^3.6", version = "*"}
flake8-strict = "*"
flake8-string-format = "*"
flake8-variables-names = {python = "^3.6", version = "*"}
pydocstyle = {python = "~2.7", version = "<4.0.0"}
mccabe = "*"
pep8-naming = "*"
pytest = "*"
wemake-python-styleguide = {python = "^3.6", version = "*"}

[tool.poetry.extras]
docs = ["alabaster", "pygments-github-lexers", "recommonmark", "sphinx"]

